--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "https://cvgellhorn@github.com/cvgellhorn/webpack-boilerplate.git"
   },
   "dependencies": {
+    "copy-webpack-plugin": "^4.3.1",
     "glslCanvas": "^0.0.25",
     "lodash": "^4.17.4",
     "raw-loader": "^0.5.1"
